fixed the css issue with white space on the right.

--- a/app/assets/stylesheets/_post.scss
+++ b/app/assets/stylesheets/_post.scss
@@ -1709,8 +1709,6 @@ h4 {
 {
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
     overflow-x: hidden; 
 }
 
@@ -1721,8 +1719,6 @@ html,body
 {
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
     overflow-x: hidden; 
 }
   }
